# unitycatalog-api

./: 50_fullapi.ipynb  90_build_lib.ipynb  README.md  pyproject.toml  settings.ini  setup.py
unitycatalog_api/: metadata.py
