[project]
name = "unitycatalog-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Nok Lam Chan", email = "mediumnok@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache2"}


[tool.pdm]
distribution = false
